feat: complete basic sqlite integration